--- a/public/grassyIntro.html
+++ b/public/grassyIntro.html
@@ -70,7 +70,7 @@
     <div class="start-button">
       <h1>Introduce Grassy</h1>
       <p>This is Grassy, it will be with you throughout your journy in Touch Grass, and cheer you up.</p>
-      <button class="start-button" onclick="window.location.href='grassyIntro.html'">Begin Workout</button>
+      <button class="start-button" onclick="window.location.href='workout.html'">Begin Workout</button>
     </div>
   </body>
 </html>
