--- a/public/newsFeed.html
+++ b/public/newsFeed.html
@@ -1,11 +1,165 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <link rel="icon" type="image/x-icon" href="/assets/logo.png">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>RealFeed</title>
     <link href="https://fonts.googleapis.com/css2?family=Work+Sans:wght@400;500&family=Space+Mono&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="style.css">
+
+    <style>
+        body, html {
+            margin: 0;
+            padding: 0;
+            height: 100%;
+            font-family: 'Work Sans', sans-serif;
+            text-align: center;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            flex-direction: column;
+            background-image: url('/assets/WorkoutGrassy.png');
+            background-size: cover;
+            background-position: center;
+        }
+
+        .container {
+            background: #ffefc9;
+            padding: 20px;
+            border-radius: 40px;
+            box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+            width: 90%;
+            max-width: 500px;
+            padding: 20px;
+        }
+
+        h1 {
+            font-family: 'Space Mono', monospace;
+            font-size: 36px;
+            margin-bottom: 10px;
+        }
+
+        h2 {
+            font-family: 'Work Sans', sans-serif;
+            font-size: 24px;
+            margin: 10px 0;
+        }
+
+        p {
+            font-size: 16px;
+            color: #555;
+        }
+
+        button {
+            margin: 5px;
+            padding: 12px 24px;
+            border: none;
+            border-radius: 10px;
+            background-color: #e4a0b7;
+            color: white;
+            font-size: 18px;
+            cursor: pointer;
+            font-family: 'Work Sans', sans-serif;
+        }
+
+        button:hover {
+            background-color: #d55f87;
+        }
+
+        #recordingIndicator {
+            color: red;
+            font-weight: bold;
+            margin-top: 10px;
+            display: none;
+        }
+
+        video, canvas {
+            width: 90%;
+            max-width: 500px;
+            margin: 10px 0;
+            border-radius: 10px;
+        }
+
+        a {
+            display: inline-block;
+            margin-top: 10px;
+            text-decoration: none;
+            color: #af4c77;
+        }
+
+        .bottom-nav {
+            display: flex;
+            justify-content: space-around;
+            width: 100%;
+            background-color: #ffefc9;
+            padding: 10px;
+            position: fixed;
+            bottom: 0;
+            left: 0;
+            right: 0;
+        }
+
+        .nav-item {
+            font-size: 18px;
+            color: #333;
+            cursor: pointer;
+        }
+
+        .nav-item:hover {
+            color: #af4c77;
+        }
+
+        .plus-icon {
+            font-size: 30px;
+        }
+
+        #camera-modal {
+            display: none;
+            position: fixed;
+            top: 0;
+            left: 0;
+            width: 100%;
+            height: 100%;
+            background-color: rgba(0, 0, 0, 0.5);
+            justify-content: center;
+            align-items: center;
+            display: flex; /* Ensures the content is centered */
+            z-index: 1000; /* Makes sure the modal is on top of other elements */
+        }
+
+        .modal-content {
+            background-color: white;
+            padding: 20px;
+            border-radius: 10px;
+            width: 90%;
+            max-width: 400px; /* Adjust as needed */
+            text-align: center;
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+        }
+
+        input[type="text"] {
+            width: 100%;
+            padding: 10px;
+            margin-bottom: 10px;
+            border-radius: 10px;
+            border: 1px solid #ccc;
+        }
+
+        #upload-button {
+            background-color: #e4a0b7;
+            color: white;
+            padding: 10px 20px;
+            border-radius: 10px;
+            font-size: 18px;
+        }
+
+        #upload-button:hover {
+            background-color: #d55f87;
+        }
+    </style>
 </head>
 <body>
     <div class="container">
@@ -22,18 +176,104 @@
                 <i class="plus-icon">+</i>
             </div>
             <div class="nav-item" id="clubs-nav">Clubs</div>
+            <div class="nav-item" id="recipe-nav">Recipes</div>
+            <div class="nav-item" id="workout-nav">Workouts</div>
         </div>
     </div>
 
     <div id="camera-modal" class="modal">
         <div class="modal-content">
-            <input type="file" id="file-input" accept="image/*">
+            <video id="camera-stream" width="100%" autoplay></video>
+            <button id="capture-button">Capture</button>
+            <canvas id="snapshot" style="display: none;"></canvas>
             <input type="text" id="caption" placeholder="Add caption...">
             <button id="upload-button">Upload</button>
             <button id="close-camera">Close</button>
         </div>
     </div>
 
-    <script src="app.js"></script>
+    <script>
+        const feedNav = document.getElementById('feed-nav');
+        const plusNav = document.getElementById('plus-nav');
+        const recipeNav = document.getElementById('recipe-nav');
+
+          recipeNav.addEventListener('click', () => {
+              window.location.href = 'recipe.html';
+          });
+          const workoutNav = document.getElementById('workout-nav');
+          workoutNav.addEventListener('click', () => {
+              window.location.href = 'workoutstuff.html';
+          });
+
+recipeNav.addEventListener('click', () => {
+    window.location.href = 'recipe.html';
+});
+        const cameraModal = document.getElementById('camera-modal');
+        const captureButton = document.getElementById('capture-button');
+        const cameraStream = document.getElementById('camera-stream');
+        const snapshotCanvas = document.getElementById('snapshot');
+        const captionInput = document.getElementById('caption');
+        const uploadButton = document.getElementById('upload-button');
+        const closeCameraButton = document.getElementById('close-camera');
+
+        let cameraStreamObj = null;
+        let capturedImage = null;
+
+        // Open camera and display stream
+        async function startCamera() {
+            try {
+                cameraStreamObj = await navigator.mediaDevices.getUserMedia({ video: true });
+                cameraStream.srcObject = cameraStreamObj;
+            } catch (err) {
+                alert('Error accessing camera: ' + err);
+            }
+        }
+
+        // Capture photo from camera feed
+        captureButton.addEventListener('click', () => {
+            const context = snapshotCanvas.getContext('2d');
+            snapshotCanvas.width = cameraStream.videoWidth;
+            snapshotCanvas.height = cameraStream.videoHeight;
+            context.drawImage(cameraStream, 0, 0, snapshotCanvas.width, snapshotCanvas.height);
+            capturedImage = snapshotCanvas.toDataURL('image/png');
+            snapshotCanvas.style.display = 'block'; // Show the snapshot canvas
+        });
+
+        // Upload captured image
+        uploadButton.addEventListener('click', () => {
+            const caption = captionInput.value;
+            if (!capturedImage || !caption) return alert('Please capture an image and add a caption.');
+
+            // Here, you'll typically need to upload the captured image to your backend and save it to the server
+            console.log('Uploading image:', capturedImage);
+            console.log('Caption:', caption);
+
+            // Simulating file save by sending it to a predefined path (assets folder)
+            const imageName = 'captured_image.png';
+            const imagePath = `/assets/${imageName}`;
+
+            // For now, we simulate the image being uploaded
+            console.log(`Image saved as: ${imagePath}`);
+
+            // Add logic to upload the image to your server and update the posts after upload
+
+            // Close the modal after uploading
+            cameraModal.style.display = 'none';
+        });
+
+        // Close camera modal
+        closeCameraButton.addEventListener('click', () => {
+            cameraModal.style.display = 'none';
+            if (cameraStreamObj) {
+                cameraStreamObj.getTracks().forEach(track => track.stop()); // Stop camera stream
+            }
+        });
+
+        // Show camera modal when "+" button is clicked
+        plusNav.addEventListener('click', () => {
+            cameraModal.style.display = 'block';
+            startCamera();
+        });
+    </script>
 </body>
 </html>
