fix: Update Day 1 link to remove timestamp and improve readability

--- a/public/workoutstuff.html
+++ b/public/workoutstuff.html
@@ -68,10 +68,10 @@
         <h1>7-Day At-Home Workout</h1>
         <p>Stay strong and active without any equipment!</p>
 
-        <div class="day" onclick="window.open('https://www.youtube.com/watch?v=M0uO8X3_tEA&t=921s')" style="cursor: pointer;">
-            <strong>Day 1:</strong> Full Body HIIT (20 min)
-          </div>
-        <div class="day" onclick="window.open('https://www.youtube.com/watch?v=rK_tmffSghQ')" style="cursor: pointer;">
+    <div class="day" onclick="window.open('https://www.youtube.com/watch?v=M0uO8X3_tEA&t')" style="cursor: pointer;">
+        <strong>Day 1:</strong> Full Body HIIT (20 min)
+    </div>
+    <div class="day" onclick="window.open('https://www.youtube.com/watch?v=rK_tmffSghQ')" style="cursor: pointer;">
             <strong>Day 2:</strong> Core Crusher (15 min)</div>
         <div class="day"><strong>Day 3:</strong> Lower Body Strength (20 min)</div>
         <div class="day"><strong>Day 4:</strong> Active Recovery (Stretch + Yoga, 20 min)</div>
