--- a/public/newsFeed.html
+++ b/public/newsFeed.html
@@ -175,7 +175,9 @@
             <div class="nav-item" id="plus-nav">
                 <i class="plus-icon">+</i>
             </div>
-            <div class="nav-item" id="clubs-nav">Clubs</div>
+             <a href="clubs.html">
+            Clubs
+              </a>
             <div class="nav-item" id="recipe-nav">Recipes</div>
             <div class="nav-item" id="workout-nav">Workouts</div>
         </div>
@@ -191,6 +193,7 @@
             <button id="close-camera">Close</button>
         </div>
     </div>
+    
 
     <script>
         const feedNav = document.getElementById('feed-nav');
