--- a/public/recipe.html
+++ b/public/recipe.html
@@ -114,11 +114,9 @@
         <div class="nav-item" onclick="window.location.href='recipe.html'">Recipes</div>
     </div>
 
-    <script>
-        const plusNav = document.getElementById('plus-nav');
-        plusNav.addEventListener('click', () => {
-            window.location.href = 'index.html'; // or link back to camera/modal functionality if you want
-        });
-    </script>
+</div>
+
+<a href="newsFeed.html">← Back to Home</a>
+</div>
 </body>
 </html>
