--- a/public/workoutstuff.html
+++ b/public/workoutstuff.html
@@ -71,15 +71,32 @@
     <div class="day" onclick="window.open('https://www.youtube.com/watch?v=M0uO8X3_tEA&t')" style="cursor: pointer;">
         <strong>Day 1:</strong> Full Body HIIT (20 min)
     </div>
-    <div class="day" onclick="window.open('https://www.youtube.com/watch?v=rK_tmffSghQ')" style="cursor: pointer;">
-            <strong>Day 2:</strong> Core Crusher (15 min)</div>
-        <div class="day"><strong>Day 3:</strong> Lower Body Strength (20 min)</div>
-        <div class="day"><strong>Day 4:</strong> Active Recovery (Stretch + Yoga, 20 min)</div>
-        <div class="day"><strong>Day 5:</strong> Upper Body Burn (15 min)</div>
-        <div class="day"><strong>Day 6:</strong> Cardio Blast (20 min)</div>
-        <div class="day"><strong>Day 7:</strong> Full Body Challenge (30 min)</div>
 
-        <a href="index.html">← Back to Home</a>
+    <div class="day" onclick="window.open('https://www.youtube.com/watch?v=rK_tmffSghQ')" style="cursor: pointer;">
+            <strong>Day 2:</strong> Core Crusher (15 min)
+    </div>
+
+    <div class="day" onclick="window.open('https://www.youtube.com/watch?v=hRU_bPCelyU')" style="cursor: pointer;">
+            <strong>Day 3:</strong> Lower Body Strength (20 min)
+    </div>
+
+    <div class="day" onclick="window.open('https://www.youtube.com/watch?v=_r8RPkprhVM')" style="cursor: pointer;">
+            <strong>Day 4:</strong> Active Recovery (Stretch + Yoga, 20 min)
+    </div>
+
+    <div class="day" onclick="window.open('https://www.youtube.com/watch?v=K0vOK0VMHUs')" style="cursor: pointer;">
+            <strong>Day 5:</strong> Upper Body Burn (15 min)
+    </div>
+
+    <div class="day"  onclick="window.open('https://www.youtube.com/watch?v=QTDbxTT8Pm8')" style="cursor: pointer;">
+        <strong>Day 6:</strong> Cardio Blast (20 min)
+    </div>
+
+    <div class="day" onclick="window.open('https://www.youtube.com/watch?v=4iy4yEKa7W8')" style="cursor: pointer;">
+        <strong>Day 7:</strong> Full Body Challenge (30 min)
+    </div>
+
+        <a href="newsFeed.html">← Back to Home</a>
     </div>
 
 </body>
